--- a/colored.css
+++ b/colored.css
@@ -1,9 +1,13 @@
+
+
+
 body {
             background: white;
             color: #000000;
             font: 14px 'futura';
-    	margin: 0;
-    	padding: 0;
+    	    margin: 0;
+    	    padding: 0;
+            height: 100%;
 }
  
 #container {
@@ -30,7 +34,7 @@ body {
 #content {
             background: white;
             width: auto;
-            height: 100%;
+            height: auto;
 }
  
 #clear {
