--- a/style.css
+++ b/style.css
@@ -12,6 +12,11 @@ body {
   padding: 0;
 }
 
+h1 {
+  font-family: "Faustina", serif;
+  font-style: normal;
+}
+
 #container {
   display: flex;
   flex-direction: column;
@@ -104,6 +109,66 @@ body {
   transform: scale(1.05);
 }
 
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.8);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.hidden {
+  display: none;
+}
+
+.modal-content {
+  position: relative;
+  max-width: 90%;
+  max-height: 90%;
+}
+
+.modal img {
+  width: 100%;
+  max-width: 700px;
+  max-height: 600px;
+  display: block;
+}
+
+.close {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 24px;
+  color: white;
+  cursor: pointer;
+  background: none;
+  border: none;
+}
+
+button {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background: none;
+  border: none;
+  color: white;
+  font-size: 36px;
+  cursor: pointer;
+}
+
+#prev {
+  left: 10px;
+}
+
+#next {
+  right: 10px;
+}
+
 ul {
   display: block;
   margin: 0;
@@ -168,4 +233,8 @@ ul.menu > li:hover > ul.submenu {
 
 a {
   text-decoration: none;
+  color: #000000;
+}
+a:hover {
+  color: gray;
 }/*# sourceMappingURL=style.css.map */
