--- a/style.scss
+++ b/style.scss
@@ -9,10 +9,13 @@ body {
     background-size: cover;
     color: #000000;
     margin: 0;
-    padding: 0;
-    
+    padding: 0; 
 }
 
+h1{
+        font-family:  "Faustina", serif;
+        font-style: normal;
+}
 #container {
     display: flex;
     flex-direction: column;
@@ -92,6 +95,7 @@ body {
     text-align: center;
 }
 }
+ // gallery
 
 #gallery {
     display: flex;
@@ -114,6 +118,69 @@ body {
     transform: scale(1.05);
   }
 
+  // modal window
+
+  .modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.8);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+  }
+  
+  .hidden {
+    display: none;
+  }
+  
+  .modal-content {
+    position: relative;
+    max-width: 90%;
+    max-height: 90%;
+  }
+  
+  .modal img {
+    width: 100%;
+    max-width: 700px;
+    max-height: 600px;
+    display: block;
+  }
+  
+  .close {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 24px;
+    color: white;
+    cursor: pointer;
+    background: none;
+    border: none;
+  }
+  
+  button {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background: none;
+    border: none;
+    color: white;
+    font-size: 36px;
+    cursor: pointer;
+  }
+  
+  #prev {
+    left: 10px;
+  }
+  
+  #next {
+    right: 10px;
+  }
+
+  // drop menu
 ul {
 display: block;
 margin: 0;
@@ -170,51 +237,9 @@ display: block;
 }
 
 
-// #gallery1 {
-// position: relative;
-// padding-top: 50%;
-// -moz-user-select: none; user-select: none;
-// }
-
-
-// #gallery1 img {
-// position: absolute;
-// top: 25%;
-// left: 12.5%;
-// max-width: 24.5%;
-// max-height: 49.5%;
-// -webkit-transform: translate(-50%, -50%);
-// transform: translate(-50%, -50%);
-// -moz-user-select: none; user-select: none;
-// cursor: zoom-in;
-// }
-// #gallery1 img:nth-child(4n-2) {left: 37.5%;}
-// #gallery1 img:nth-child(4n-1) {left: 62.5%;}
-// #gallery1 img:nth-child(4n) {left: 87.5%;}
-// #gallery1 img:nth-child(n+5) {top: 75%;}
-
-// #gallery1 img:focus {
-// position: fixed;
-// top: 50%;
-// left: 50%;
-// z-index: 31;
-// max-width: 100%;
-// max-height: 100%;
-// outline: none;
-// pointer-events: none;
-// }
-
-// #gallery1 img:focus ~ div {
-// position: fixed;
-// top: 0;
-// left: 0;
-// right: 0;
-// bottom: 0;
-// z-index: 30;
-// background: black;
-// cursor: zoom-out;
-// }
 
 a { 
 text-decoration: none; 
+color: #000000;
+    &:hover{color: gray}
 } 
