--- a/style.css
+++ b/style.css
@@ -12,6 +12,14 @@ body {
   padding: 0;
 }
 
+.custom-hr {
+  border: none; /* Убираем стандартные рамки */
+  height: 2px; /* Толщина линии */
+  background-color: rgb(30, 30, 30); /* Цвет линии */
+  margin: 20px 0; /* Отступы сверху и снизу */
+  display: block;
+}
+
 h1 {
   font-family: "Faustina", serif;
   font-style: normal;
@@ -76,8 +84,15 @@ h1 {
 }
 #container #content .content_container_table {
   width: 100%;
-  max-width: 800px;
+  max-width: 600px;
   height: 100%;
+}
+#container #content .content_container_poster {
+  width: 100vh;
+  max-width: 600px;
+}
+#container #content .content_container_poster img {
+  max-width: 600px;
 }
 #container #footer {
   flex-shrink: 0;
@@ -150,7 +165,7 @@ h1 {
   border: none;
 }
 
-button {
+.galleryButton {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
@@ -237,4 +252,10 @@ a {
 }
 a:hover {
   color: gray;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }/*# sourceMappingURL=style.css.map */
