--- a/style.css
+++ b/style.css
@@ -10,6 +10,8 @@ body {
   color: #000000;
   margin: 0;
   padding: 0;
+  font-family: "Montserrat", Helvetica, sans-serif;
+  letter-spacing: 1px;
 }
 
 .link {
@@ -57,6 +59,10 @@ body {
   background: white;
   width: auto;
 }
+#container #header #logo {
+  width: 15%;
+  padding-top: 20px;
+}
 #container #content {
   display: flex;
   flex-direction: column;
@@ -71,6 +77,7 @@ body {
   margin-bottom: 10px;
   text-align: left;
   font-size: 16px;
+  letter-spacing: 2px;
 }
 #container #content .content_container {
   width: 100%; /* Контейнер занимает всю ширину */
@@ -89,12 +96,14 @@ body {
   height: auto; /* Автоматическая высота, чтобы текст умещался */
   margin-bottom: 10px; /* Отступ от нижнего края */
   text-align: left; /* Выравнивание текста по центру */
-  font-size: 16px; /* Размер текста */
+  font-size: small; /* Размер текста */
+  color: #363636;
 }
 #container #content .content_container_table {
   width: 100%;
   max-width: 600px;
   height: 100%;
+  font-size: small;
 }
 #container #content .content_container_poster {
   width: 100vh;
@@ -174,6 +183,10 @@ body {
 
 .modal-content {
   position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 50px;
   max-width: 90%;
   max-height: 90%;
 }
@@ -190,10 +203,11 @@ body {
   top: 10px;
   right: 10px;
   font-size: 24px;
-  color: white;
+  color: rgb(159, 156, 156);
   cursor: pointer;
   background: none;
   border: none;
+  opacity: 50%;
 }
 
 .galleryButton {
@@ -205,6 +219,11 @@ body {
   color: white;
   font-size: 36px;
   cursor: pointer;
+  opacity: 50%;
+  transition: color 0.3s;
+}
+.galleryButton:hover {
+  color: grey;
 }
 
 #prev {
@@ -220,6 +239,7 @@ ul {
   margin: 0;
   padding: 0;
   list-style: none;
+  letter-spacing: 3px;
 }
 
 ul:after {
@@ -235,8 +255,8 @@ ul.menu > li {
 
 ul.menu > li > a {
   display: block;
-  padding: 10px;
   color: black;
+  padding: 15px;
   background-color: white;
   text-decoration: none;
   position: relative; /* Позиционирование для псевдоэлемента */
@@ -284,6 +304,7 @@ ul.submenu > li > a {
   background-color: black;
   text-decoration: none;
   position: relative; /* Чтобы псевдоэлемент ::after правильно позиционировался */
+  font-size: small;
 }
 
 ul.submenu > li > a::after {
