--- a/style.css
+++ b/style.css
@@ -36,8 +36,13 @@ body {
   width: 100%;
 }
 
-#logo {
-  width: 50%;
+#logo-container {
+  display: inline-block; /* Убедиться, что контейнер сохраняет размеры */
+}
+
+#logo-container img {
+  width: 150px; /* Или конкретная ширина */
+  height: auto;
   padding-top: 20px;
 }
 
@@ -63,6 +68,9 @@ body {
 #container #header #navigation {
   background: white;
   width: auto;
+}
+#container #header a {
+  display: block; /* Убедиться, что ссылка ведет себя как блок */
 }
 #container #content {
   display: flex;
